Fixed user profile: Tabs align with header

--- a/NYSeeNow-frontend/src/pages/userProfilePage/UserProfile.module.css
+++ b/NYSeeNow-frontend/src/pages/userProfilePage/UserProfile.module.css
@@ -5,11 +5,23 @@
     height: calc(100vh - 200px); 
     width: calc(100vw - 200px); 
     padding: 20px;
-    margin: 100px; 
+    margin: 80px 120px; 
     position: relative; /* Added this to allow absolute positioning of children */
     background-color: #ffffff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+  }
+
+  .header {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    border-bottom: 1px solid lightgray;
+    padding: 10px;
+    background-color: #ffffff;
+    text-align: center;
+    z-index: 1; /* Make sure the header is above other elements */
   }
   
   .sidebar {
@@ -53,4 +65,12 @@ button:hover {
 
 button.active {
   background-color: #ced4da; /* Dark grey background for active tab */
+}
+
+.pageWrapper {
+    background-color: #A0A0A0; 
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
